# AoC2023

./: .gitignore  AoC.cpp  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  helloworld.cpp
.github/workflows/: flow.yml  learn-github-actions.yml  perform_functional_tests.yml  perform_unit_tests.yml
common/: common.cpp  common.hpp
config/: config.cpp.in  config.hpp.in
exercises/: day.hpp  day1.cpp  day1.hpp  day1a.cpp  day1a.hpp  day1b.cpp  day1b.hpp  day2a.cpp  day2a.hpp  day2b.cpp  day2b.hpp
functionalTests/: expectedResults.txt  functionalTestsScript.sh
src/: AoC.cpp
src/common/: ICommon.hpp  common.cpp  common.hpp
src/exercises/: IDay.hpp  class.cpp  class.hpp  day.hpp  day1a.cpp  day1a.hpp  day1b.cpp  day1b.hpp  day2a.cpp  day2a.hpp  day2b.cpp  day2b.hpp  daysIncluded.hpp  example.cpp  prepareDay.cpp
unitTests/: testDay1a.cpp
unitTests/common/: testCommon.cpp
unitTests/common/testFiles/: fourLines.txt
unitTests/exercises/: testDay1a.cpp
